<resources>
    <string name="app_name">GoCosmic</string>
    <string name="maincontent">Welcome to the On-Demand Service App for Users and Beauticians.A user friendly App to connect Users and Beauticians and get jobs completed at most economic rates.</string>
    <string name="title_activity_login">Login</string>
    <string name="social_login">LOG IN WITH SOCIAL ACCOUNT</string>
    <string name="social_register">REGISTER WITH SOCIAL ACCOUNT</string>
    <string name="term_condition"><![CDATA[I agree to the Terms & Conditions and Privacy Policy]]></string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page">Beautician</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="facial">Facial</string>
    <string name="hair_style">Hair Style</string>
    <string name="waxing">Waxing</string>
    <string name="makeup">Make up</string>
    <string name="nails">Nails</string>
    <string name="brown_bar">brown bar</string>
    <string name="cont_disc"><![CDATA[Search for beauty & wellness salons in your area]]></string>
    <string name="discover">Discover</string>
    <string name="make_your_travel_safe">Make your travel safe</string>
    <string name="alert_msg">Send alert to your friends/family members in case of emergency.</string>
    <string name="add_msg">Please add item to your emergency contacts</string>
    <string name="add_suggest">you can add up to 5 contacts</string>
    <string name="add_contacts">add contacts</string>
    <string name="add_card">add card</string>
    <string name="share_msg">share your invite code</string>
    <string name="ref_msg">Invite your friends by sharing above invite code and earn the refferal amount.</string>
    <string name="invite_friends">invite friends</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="cosmic">Cosmic</string>

    <string-array name="navigation_drawer_items_array">
        <item>CATEGORIES</item>
        <item>My Profile</item>
        <item>Your Jobs</item>
        <item>Add Card</item>
        <item>My Wallet</item>
        <item>My On Going Jobs</item>
        <item>Emergency Contact</item>
        <item>Invite Friends</item>
        <item>Support</item>
    </string-array>
</resources>
