<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:contentDescription="@null"
        android:src="@drawable/frag_emergency" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/make_your_travel_safe"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:text="@string/alert_msg"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/add_msg"
        android:textColor="@color/colorPrimary" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="80dp"
        android:gravity="bottom|center"
        android:textStyle="bold"
        android:text="@string/add_suggest"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/beautyLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:elevation="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:textAllCaps="true"
        android:text="@string/add_contacts"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>