<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@null"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/invite_frag" />

    <TextView
        android:id="@+id/refCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/share_msg"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="pr1047"
        android:fontFamily="casual"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="top|center"
        android:text="@string/ref_msg"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/inviteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:elevation="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:textAllCaps="true"
        android:text="@string/invite_friends"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
