<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/social_register"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rFnTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/rFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_white_radius"
                        android:hint="First Name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="5dp"
                    android:layout_height="1dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rLnTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/rLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_white_radius"
                        android:hint="Last Name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rEmlTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_white_radius"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/rPassTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_white_radius"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="1.3">

                <Spinner
                    android:id="@+id/conCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight=".3"
                    android:background="@drawable/btn_white_radius"
                    android:gravity="center"
                    android:spinnerMode="dialog" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="1dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rMobTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/rMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_white_radius"
                        android:hint="Mobile"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rReferral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_white_radius"
                    android:drawableEnd="@drawable/info"
                    android:drawablePadding="10dp"
                    android:hint="Referral/Invite Code (Optional)"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/rTermCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/term_condition"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/rSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30sp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_solid"
                android:elevation="5dp"
                android:ems="10"
                android:gravity="center"
                android:padding="10dp"
                android:text="REGISTER"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:fontFamily="sans-serif-condensed" />


            <TextView
                android:id="@+id/rLoginLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>